--- a/css/styles.css
+++ b/css/styles.css
@@ -200,11 +200,9 @@ h1{
                     
     }
     
-    .p_1_yac,
-    .p_2_yac,
-    .p_3_yac,
-    .p_4_yac{
+    .p_yac{
         grid-column: span 2;
+        
     } 
 
     .zonte_p1_yac iframe,
@@ -699,9 +697,8 @@ p::first-letter{
     padding-bottom: 10px;    
 }
 
-.p_sect_uno,
-.p_sect_dos,
-.p_sect_tres{
+
+.p_sect{
     grid-row: 1/3;
     align-self: center;
     padding: 0% 10% 0% 5%;
@@ -775,11 +772,9 @@ p::first-letter{
     margin-right: 2px;                
 }
 
-.p_1_yac,
-.p_2_yac,
-.p_3_yac,
-.p_4_yac{
+.p_yac{
     grid-column: span 2;
+    
 } 
 
 .zonte_p1_yac iframe,
